# MandiMonitor

./: .env.example  .gitignore  AMAZON_COOKIE_SETUP.md  CHANGELOG.md  DEV_SECURITY_IMPLEMENTATION.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  ENHANCED_IMPLEMENTATION_ROADMAP.md  INSTALL_AND_START.bat  LICENSE  PA-API-Implementation-Summary.md  Paapi-todo-continuation.md  Paapi-todo.md  Paapi.md  README.md  README_public.md  SECURITY_AUDIT_REPORT.md  SECURITY_DEVELOPMENT_GUIDE.md  SECURITY_ENHANCED_GUIDE.md  SECURITY_HARDENING_ROADMAP.md  START_BOT_SIMPLE.bat  START_TESTING.md  Security_Features.md  backup_db.sh  comprehensive_debug_results.json  comprehensive_test_log.txt  comprehensive_test_report_20250830_020721.json  debug_enhanced_messaging.py  debug_enhancement.py  debug_feature_extraction.py  debug_final_filtering.py  debug_max_price_only.py  debug_paapi_requests.py  debug_price_flow.py  debug_price_test.py  debug_price_unit_conversion.py  debug_search_comparison.py  debug_search_enhancement.py  debug_simple_scoring.py  (+41 more)
Changelog/: changelog-manual-testing.md  changelog_intelligence.md  level5_manual_testing_summary.md  rate_limiting_optimization_2025-08-27.md
Code and Project Overview/: MandiMonitor-Code-Analysis-Report.md
Cursor Chats/: cursor_implement_flask_admin_service_wi.md
Implementation Plans/: Filling-gaps-Intelligence-model.md  Intelligence-model.md
Testing Philosophy/: Discovery-MandiMonitor-Perfect-Mock-Trap.md  Discovery-Template.md  Example-Discovery-MandiMonitor-KeyError.md  Quick-Reference-Card.md  Testing-Philosophy.md
bot/: __init__.py  (+55 more)
(+132 files in other folders)
